# tp-project

./: CMakeLists.txt  README.md  arcitecture  basic.cpp  creator.cpp  elfs.cpp  humanity.cpp  makearmy.cpp  orks.cpp  zombie.cpp  архитектура проекта
create/: creators.h
decorator/: upgrades.h
elfs/: elfs.cpp  elfs.h
humanity/: humanity.cpp  humanity.h
information/: printinfo.cpp  printinfo.h
proxy/: proxyElfs.cpp
units/: abstractunits.h  concreteunits.h
